Fix punctuation and formatting in journal.html

--- a/journal.html
+++ b/journal.html
@@ -115,7 +115,7 @@
     <section class="mb-12">
       <p class="text-lg text-gray-700 leading-relaxed">
         Entre mi-janvier et mi-février 2026, on a fait tourner les premières séances à l'école communale de Walhain. 
-        Quatre enfants, quatre mercredis. Petit démarrage — beaucoup appris.
+        Quatre enfants, quatre mercredis. Petit démarrage, beaucoup appris.
         Ce journal, c'est pour les parents qui veulent savoir ce qu'il se passe vraiment.
       </p>
     </section>
@@ -142,7 +142,7 @@
               de plus important : la façon dont le groupe va fonctionner.
             </p>
             <p>
-              On a mis en place un rituel d'entrée — un tour de table rapide pour savoir comment 
+              On a mis en place un rituel d'entrée : un tour de table rapide pour savoir comment 
               chacun arrive. Fatigué ? Excité ? Stressé par autre chose ? Un enfant qui arrive 
               préoccupé et qui ne l'a pas dit va le manifester autrement pendant la séance.
             </p>
@@ -175,7 +175,7 @@
         </div>
 
         <h2 class="text-xl font-bold text-ludus-orange mb-4">
-          Keep Talking and Nobody Explodes — le grand test
+          Keep Talking and Nobody Explodes : le grand test
         </h2>
 
         <div class="grid md:grid-cols-2 gap-6 mb-4 items-start">
@@ -196,7 +196,7 @@
             </p>
             <p>
               Entre les erreurs de traduction et quelques modules capricieux, la frustration est montée. 
-              C'est là que le rôle d'animateur prend tout son sens : transformer l'énervement en question — 
+              C'est là que le rôle d'animateur prend tout son sens : transformer l'énervement en question 
               <em>qu'est-ce qu'on change pour la prochaine fois ?</em>
             </p>
           </div>
