--- a/recherche.html
+++ b/recherche.html
@@ -16,18 +16,7 @@
   <meta property="og:description" content="Les bases scientifiques de notre approche pédagogique par le jeu vidéo coopératif." />
   <meta property="og:locale" content="fr_BE" />
 
-  <script>
-    (function(){
-      var saved = localStorage.getItem('theme');
-      var theme;
-      if (saved) { theme = saved; } else {
-        try { theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'ludus-dark' : 'light'; }
-        catch(e) { theme = 'light'; }
-      }
-      document.documentElement.setAttribute('data-theme', theme);
-      if (theme === 'ludus-dark') document.documentElement.classList.add('dark');
-    })();
-  </script>
+  <script>(function(){var t=localStorage.getItem('theme');document.documentElement.setAttribute('data-theme',t==='dark'||t==='light'?t:(window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches?'dark':'light'));})();</script>
 
   <script src="/assets/js/theme-manager.js"></script>
 
@@ -97,7 +86,7 @@
 
     <!-- Avertissement épistémique -->
     <section class="mb-10">
-      <div class="alert border-2 border-ludus-orange bg-orange-50">
+      <div class="alert border-2 border-ludus-orange bg-warning/10">
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6 text-ludus-orange" fill="none" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
         </svg>
